feat: adicionado biblioteca gson e operadores join e operadores filter