@@ -5,16 +5,14 @@ import sgbd.info.Query;
 import sgbd.prototype.Column;
 import sgbd.prototype.Prototype;
 import sgbd.prototype.RowData;
-import sgbd.query.basic.binaryop.MergeJoin;
+import sgbd.query.basic.binaryop.NestedLoopJoin;
 import sgbd.query.basic.sourceop.TableScan;
-import sgbd.query.basic.unaryop.ExternalSortOperator;
 import sgbd.query.basic.unaryop.FilterOperator;
 import sgbd.table.SimpleTable;
 import sgbd.table.Table;
-import sgbd.util.Filter;
 
-import java.util.Comparator;
-import java.util.List;
+import java.util.Arrays;
+import java.util.Map;
 
 public class Main {
 
@@ -27,6 +25,7 @@ public class Main {
         p1.addColumn("idade",4,Column.CAM_NULL_COLUMN);
         p1.addColumn("salario",4,Column.NONE);
         p1.addColumn("idCidade",4,Column.NONE);
+
         Prototype p2 = new Prototype();
         p2.addColumn("id",4, Column.PRIMARY_KEY);
         p2.addColumn("nome",255,Column.DINAMIC_COLUMN_SIZE);
@@ -37,56 +36,48 @@ public class Main {
         users.open();
         cidades.open();
 
-        Operator op = new TableScan(users, List.of("id","nome","idade","email","idCidade"));
-        Operator op2 = new FilterOperator(op, new Filter<Tuple>() {
-            @Override
-            public boolean match(Tuple entries) {
-                return entries.getContent("users").getInt("idade")>18;
-            }
-        });
+        Operator selectSomeUsers = new TableScan(users, Arrays.asList("id","idade","nome", "idCidade"));
 
-//        Operator join1 = new PKNestedLoopJoin(op2,new PKTableScan(cidades,null),"users","idCidade");
-
-        Operator cidadeScan = new TableScan(cidades);
-//        Operator join1 = new BlockNestedLoopJoin(cidadeScan,op2, new ComparableFilter<Tuple>() {
-//            @Override
-//            public boolean match(Tuple t1, Tuple t2) {
-//                return t2.getContent("users").getInt("idCidade") ==
-//                        t1.getContent("cidades").getInt("id");
-//            }
-//        });
-
-        Operator join1 = new MergeJoin(op2,cidadeScan,"users","idCidade","cidades","id");
-
-        Operator sorted = new ExternalSortOperator(join1, new Comparator<Tuple>() {
-            @Override
-            public int compare(Tuple o1, Tuple o2) {
-                return o1.getContent("users").getInt("id").compareTo(
-                        o2.getContent("users").getInt("id")
-                );
-            }
+        Operator where = new FilterOperator(selectSomeUsers,(Tuple t)->{
+            return t.getContent("users").getInt("idade") >=18;
         });
 
 
+        Operator selectAllCidades = new TableScan(cidades);
 
-        Operator executor = sorted;
+        Operator join = new NestedLoopJoin(where,selectAllCidades,(t1, t2) -> {
+            return t1.getContent("users").getInt("idCidade") == t2.getContent("cidades").getInt("id");
+        });
+
+
+        Operator executor=join;
 
         executor.open();
         while(executor.hasNext()){
             Tuple t = executor.next();
             String str = "";
 
-
-            RowData row = t.getContent("users");
-
-            str += "users.nome="+row.getString("nome")+" | ";
-            str += "users.idade="+row.getInt("idade")+" | ";
-            str += "users.email="+row.getString("email")+" | ";
-            str += "users.idCidade="+row.getInt("idCidade")+" | ";
-
-            row = t.getContent("cidades");
-            str += "cidades.nome="+row.getString("nome")+" | ";
-            str += "cidades.id="+row.getInt("id")+" | ";
+            for (Map.Entry<String,RowData> row: t){
+                for(Map.Entry<String,byte[]> data:row.getValue()) {
+                    switch(data.getKey()){
+                        case "idade":
+                        case "anoNascimento":
+                        case "id":
+                        case "idCidade":
+                            str+=row.getKey()+"."+data.getKey()+"="+row.getValue().getInt(data.getKey());
+                            break;
+                        case "salario":
+                            str+=row.getKey()+"."+data.getKey()+"="+row.getValue().getFloat(data.getKey());
+                            break;
+                        case "name":
+                        case "nome":
+                        default:
+                            str+=row.getKey()+"."+data.getKey()+"="+row.getValue().getString(data.getKey());
+                            break;
+                    }
+                    str+=" | ";
+                }
+            }
 
             System.out.println(str);
         }
@@ -98,10 +89,13 @@ public class Main {
         users.close();
         cidades.close();
 
+        for(int x=0;x<2;x++)
+            System.out.println("");
+
         System.out.println("Query performance: ");
         System.out.println("Buscas por chave primaria: "+ Query.PK_SEARCH);
         System.out.println("Tuplas sorteadas: "+Query.SORT_TUPLES);
-        System.out.println("Comparações de FILTER: "+Query.FILTER);
+        System.out.println("Comparações de FILTER: "+Query.COMPARE_FILTER);
         System.out.println("Comparações de JOIN: "+Query.COMPARE_JOIN);
 
         System.out.println("Disk performance: ");
